--- a/views/header.ejs
+++ b/views/header.ejs
@@ -48,8 +48,9 @@
                         <li><a href="summary">Thống kê</a></li>
                         <li><a href="campaign">Chiến dịch bán hàng</a></li>
                         <li><a href="upload">Upload</a></li>
+                        <li><a href="updatedb">Update database</a></li>
                     </ul>
-                </li>
+                </li>   
                 <%}%>
                     <li>
                         <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
