--- a/views/header.ejs
+++ b/views/header.ejs
@@ -62,7 +62,7 @@
         .dropdown :hover{
             color: coral;
         }
-        .nav navbar-nav {
+        .nav.navbar-nav {
             font-weight: bold;
         }
 
@@ -86,10 +86,42 @@
             color: coral;
             text-decoration: underline;
         }
+
+        .navbar.navbar-dark.bg-dark a.icon{
+            display: none;
+        }
+
+        @media screen and (max-width: 600px) {
+            .navbar.navbar-dark.bg-dark > .container-fluid > .nav.navbar-nav > li > a, .dropdown{
+                display: none;
+            }
+            .navbar.navbar-dark.bg-dark > .container-fluid > .nav.navbar-nav > li > a, .dropdown > .dropdown-menu{
+                position: relative;
+            }
+            .navbar.navbar-dark.bg-dark a.icon{
+                float: left;
+                display: block;
+            }
+        }
+
+        @media screen and (max-width: 600px){   
+            .navbar.navbar-dark.bg-dark.responsive {position: relative;}
+            .navbar.navbar-dark.bg-dark.responsive a.icon{
+                position:absolute;
+                right: 0;
+                top: 0;
+            }
+            .navbar.navbar-dark.bg-dark.responsive > .container-fluid > .nav.navbar-nav > li > a, .dropdown{
+                display: block;
+                width: 100%;
+                text-align: left;
+            }
+        }
+
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" style="background-color: #FFF;">
+    <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/" style="color: black; font-weight: 800;">LEAGUE STORE 77</a>
@@ -203,6 +235,7 @@
                 </li>
             </ul>
         </div>
+        <a href="javascript:void(0);" class="icon" style="font-size: 30px; margin-left: 10px;" onclick="responsiveMenu()">&#9776;</a>
     </nav>
     
     <script>
@@ -213,6 +246,15 @@
         function closeNav() {
         document.getElementById("mySidenav").style.width = "0";
         }
+
+        function responsiveMenu() {
+            var x = document.getElementById("topMenu");
+            if (x.className === "navbar navbar-dark bg-dark") {
+                x.className += " responsive";
+            } else {
+                x.className = "navbar navbar-dark bg-dark";
+            }
+        } 
     </script>
 </body>
 </html>
